Fixed z-index collision between header and footer on mobile devices
Also content min-height was set for situations when there's no content.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -51,7 +51,7 @@ header#site-head {
   background-color: @accent;
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 1;
   height: 45rem;
   width: 100%;
   background-position: 50% 50%;
@@ -125,6 +125,7 @@ header#site-head {
 //==============================================================================
 
 main.content {
+  min-height: 30rem;
   position: relative;
   z-index: 3;
   width: 100%;
@@ -316,7 +317,7 @@ main.content {
 
 footer.site-footer {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   bottom: 0;
   width: 100%;
   height: 12rem;
